set(W3DVIEW_SRC
    AddToLineupDialog.cpp
    AdvancedAnimSheet.cpp
    AggregateNameDialog.cpp
    AmbientLightDialog.cpp
    AnimatedSoundOptionsDialog.cpp
    AnimationPropPage.cpp
    AnimationSpeed.cpp
    AnimMixingPage.cpp
    AnimReportPage.cpp
    AssetInfo.cpp
    AssetPropertySheet.cpp
    BackgroundBMPDialog.cpp
    BackgroundColorDialog.cpp
    BackgroundObjectDialog.cpp
    BoneMgrDialog.cpp
    CameraDistanceDialog.cpp
    CameraSettingsDialog.cpp
    ColorBar.cpp
    ColorPicker.cpp
    ColorPickerDialogClass.cpp
    ColorSelectionDialog.cpp
    ColorUtils.cpp
    DataTreeView.cpp
    DeviceSelectionDialog.cpp
    DialogToolbar.cpp
    DirectoryDialog.cpp
    EditLODDialog.cpp
    EmitterColorPropPage.cpp
    EmitterFramePropPage.cpp
    EmitterGeneralPropPage.cpp
    EmitterInstanceList.cpp
    EmitterLineGroupPropPage.cpp
    EmitterLinePropPage.cpp
    EmitterParticlePropPage.cpp
    EmitterPhysicsPropPage.cpp
    EmitterPropertySheet.cpp
    EmitterRotationPropPage.cpp
    EmitterSizePropPage.cpp
    EmitterUserPropPage.cpp
    GammaDialog.cpp
    Globals.cpp
    GraphicView.cpp
    HierarchyPropPage.cpp
    MainFrm.cpp
    MeshPropPage.cpp
    OpacitySettingsDialog.cpp
    OpacityVectorDialog.cpp
    ParticleBlurTimeKeyDialog.cpp
    ParticleFrameKeyDialog.cpp
    ParticleRotationKeyDialog.cpp
    ParticleSizeDialog.cpp
    PlaySoundDialog.cpp
    ResolutionDialog.cpp
    RestrictedFileDialog.cpp
    RingColorPropPage.cpp
    RingGeneralPropPage.cpp
    RingPropertySheet.cpp
    RingSizePropPage.cpp
    SaveSettingsDialog.cpp
    ScaleDialog.cpp
    SceneLightDialog.cpp
    ScreenCursor.cpp
    SoundEditDialog.cpp
    SphereColorPropPage.cpp
    SphereGeneralPropPage.cpp
    SpherePropertySheet.cpp
    SphereSizePropPage.cpp
    StdAfx.cpp
    TexturePathDialog.cpp
    Toolbar.cpp
    Utils.cpp
    Vector3RndCombo.cpp
    ViewerAssetMgr.cpp
    ViewerScene.cpp
    VolumeRandomDialog.cpp
    W3DView.cpp
    W3DView.rc
    W3DViewDoc.cpp
    W3DViewView.cpp
    AddToLineupDialog.h
    AdvancedAnimSheet.h
    AggregateNameDialog.h
    AmbientLightDialog.h
    AnimatedSoundOptionsDialog.h
    AnimationPropPage.h
    AnimationSpeed.h
    AnimMixingPage.h
    AnimReportPage.h
    AssetInfo.h
    AssetPropertySheet.h
    AssetTypes.h
    BackgroundBMPDialog.h
    BackgroundColorDialog.h
    BackgroundObjectDialog.h
    BoneMgrDialog.h
    CameraDistanceDialog.h
    CameraSettingsDialog.h
    ColorBar.h
    ColorPicker.h
    ColorPickerDialogClass.h
    ColorSelectionDialog.h
    ColorUtils.h
    DataTreeView.h
    DeviceSelectionDialog.h
    DialogToolbar.h
    DirectoryDialog.h
    EditLODDialog.h
    EmitterColorPropPage.h
    EmitterFramePropPage.h
    EmitterGeneralPropPage.h
    EmitterInstanceList.h
    EmitterLineGroupPropPage.h
    EmitterLinePropPage.h
    EmitterParticlePropPage.h
    EmitterPhysicsPropPage.h
    EmitterPropertySheet.h
    EmitterRotationPropPage.h
    EmitterSizePropPage.h
    EmitterUserPropPage.h
    GammaDialog.h
    Globals.h
    GraphicView.h
    HierarchyPropPage.h
    LODDefs.h
    MainFrm.h
    MeshPropPage.h
    OpacitySettingsDialog.h
    OpacityVectorDialog.h
    ParticleBlurTimeKeyDialog.h
    ParticleFrameKeyDialog.h
    ParticleRotationKeyDialog.h
    ParticleSizeDialog.h
    PlaySoundDialog.h
    ResolutionDialog.h
    resource.h
    RestrictedFileDialog.h
    RingColorPropPage.h
    RingGeneralPropPage.h
    RingPropertySheet.h
    RingSizePropPage.h
    SaveSettingsDialog.h
    ScaleDialog.h
    SceneLightDialog.h
    ScreenCursor.h
    SoundEditDialog.h
    SphereColorPropPage.h
    SphereGeneralPropPage.h
    SpherePropertySheet.h
    SphereSizePropPage.h
    StdAfx.h
    TexturePathDialog.h
    Toolbar.h
    Utils.h
    Vector3RndCombo.H
    ViewerAssetMgr.h
    ViewerScene.h
    VolumeRandomDialog.h
    W3DView.h
    W3DViewDoc.h
    W3DViewView.h
)

# Targets to build.
add_executable(w3dview WIN32)

target_compile_definitions(w3dview PRIVATE
    _AFXDLL
    $<$<CONFIG:Debug>:WWDEBUG>
    $<$<CONFIG:Debug>:_DEBUG>
)

target_include_directories(w3dview PRIVATE
    ../../wwdebug
    ../../wwlib
    ../../ww3d2
    ../../WWMath
    ../../wwphys
    ../../wwsaveload
    ../../WWAudio
    ../..
)

target_compile_options(w3dview PRIVATE
    ${WARNING_FLAGS}
)

target_link_libraries(w3dview PRIVATE
    d3d8lib
    version
    winmm
    milesstub
    wwcommon
    wwdebug
    wwlib
    wwmath
    wwphys
    wwsaveload
    ww3d2
    wwaudio
)

target_sources(w3dview PRIVATE ${W3DVIEW_SRC})

if(WIN32 OR "${CMAKE_SYSTEM}" MATCHES "Windows")
    target_link_options(w3dview PRIVATE "/NODEFAULTLIB:libci.lib")
endif()
